[package]
name = "aegis_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aegis_bot"
path = "bot.rs" # <-- Ensure this matches the name of your file in the /main/ folder

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_ti = "0.1"      # Math engine for indicator confluence
chrono = "0.4"
colored = "2.0"
