[package]
name = "aegis_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aegis_bot"
path = "bot.rs" # Ensure the file is named bot.rs in your folder

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_ti = "0.1"
chrono = "0.4"
colored = "2.0"
